# amrl_msgs

./: .gitignore  CMakeLists.txt  Makefile  README.md  manifest.xml  package.xml
.github/workflows/: buildTest.yml  ros1-noetic.yml  ros2-humble.yml
action/: RecoveryExecute.action
msg/: BBox2DArrayMsg.msg  BBox3DMsg.msg  CACCStatus.msg  ColoredText.msg  DetectedItem.msg  ErrorReport.msg  Float32Array2D.msg  GPSArrayMsg.msg  GPSMsg.msg  LDOSLaserScan.msg  LDOSLocalization.msg  LDOSTwist.msg  MissionStatusMsg.msg  NavStatusMsg.msg  RobofleetStatus.msg  SensorHealth.msg  SensorStatus.msg  SystemHealth.msg  SystemLog.msg  TrajectoryRolloutOption.msg  VisualizationMsg.msg
srv/: CarrotPlannerSrv.srv  ChangeVirtualHomeGraphSrv.srv  CostmapSrv.srv  FindObjectSrv.srv  GetImageAtPoseSrv.srv  GetImageSrv.srv  GetVisibleObjectsSrv.srv  GraphNavGPSSrv.srv  OrbSLAMSaveFilesAndStartNewTrajectorySrv.srv  PickObjectSrv.srv  RecoveryDetectSrv.srv  RememberSrv.srv  SemanticObjectDetectionSrv.srv  TaskSrv.srv  TwistExecutedSrv.srv  VideoCaptionSrv.srv
srv_gen/cpp/include/amrl_msgs/: SocialPipsSrv.h
