<package format="2">
  <name>amrl_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS Message definitions used by AMRL projects
  </description>
  <maintainer email="joydeepb@cs.utexas.edu">Joydeep Biswas</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>

