<?xml version="1.0"?>

<package format="2">
  <name>amrl_msgs</name>
  <version>0.1.0</version>
  <description>
    UT AMRL custom message types
  </description>
  <maintainer email="joydeepb@cs.utexas.edu">Joydeep Biswas</maintainer>
  <license>LGPL 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
  <depend>visualization_msgs</depend>
  <depend>angles</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>